Updated JavaDoc.
git-svn-id: svn+ssh://svn.code.sf.net/p/epidoc/code/trunk@90 85be4e97-ed4a-0410-b6a7-8d1dfdb05c0b